# Vigil

./: .env.example  .gitignore  README.md  README_CN.md  approval_manager.py  brain.py  config.py  config.yaml  doctor.py  gateway.py  heartbeat.py  main.py  manage_memory.py  pyproject.toml  requirements.txt
benchmarks/: README.md  cases.json  run_bench.py
benchmarks/results/: 2026-03-19.json
channels/: discord_channel.py
memory/: vector_store.py
skills/: loader.py  mcp_loader.py
skills/builtin/: file_ops.py  memory_ops.py  shell.py
workspace/: SOUL.md.example  USER.md.example  mcp.json
workspace/skills/: README.md  SKILL_CREATOR.md  browser.py  datetime_info.py  web_search.py
